--- a/.github/workflows/mian.yml
+++ b/.github/workflows/mian.yml
@@ -1,5 +1,3 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Build
 
 # Controls when the workflow will run
@@ -28,7 +26,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v2
         with:
-          channel: 'stable'
+          channel: 'master'
           
       - name: Build
         run: |
