build(i18n): use slang for i18n

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,7 @@ jobs:
         run: |
           flutter config --enable-windows-desktop
           flutter pub get
+          dart run slang
           flutter build windows
     
       - name: Archive Release
