--- a/.gitignore
+++ b/.gitignore
@@ -60,6 +60,11 @@ linked_*.ds
 unlinked.ds
 unlinked_spec.ds
 
+# Flutter generated
+*.g.dart
+*.gen.dart
+*.freezed.dart
+
 # Android related
 **/android/**/gradle-wrapper.jar
 .gradle/
