--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -1,8 +1,7 @@
 name: 'Close stale issues and PRs'
 on:
   schedule:
-    - cron: '30 1 * * *'
-
+    - cron: '30 1 * * 0'
 jobs:
   stale:
     runs-on: ubuntu-latest
@@ -13,4 +12,4 @@ jobs:
           stale-pr-message: 'Message to comment on stale PRs. If none provided, will not mark PRs stale'
           stale-issue-label: 'no-issue-activity'
           days-before-stale: 30
-          days-before-close: 5
+          days-before-close: 7
