--- a/.github/ISSUE_TEMPLATE/feature_request_zh.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request_zh.yml
@@ -7,7 +7,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        请确保 [文档](https://github.com/Xmarmalade/alisthelper/blob/master/README.md) 和 [issue](https://github.com/Xmarmalade/alisthelper/issue 中没有相关内容，并按照模版提供信息，
+        请确保 [文档](https://github.com/Xmarmalade/alisthelper/blob/master/README.md) 和 [issue](https://github.com/Xmarmalade/alisthelper/issue) 中没有相关内容，并按照模版提供信息，
         否则 issue 将被立即关闭。
 
   - type: textarea
