chore(macOS build): add build for macOS

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,3 +74,52 @@ jobs:
         with:
           name: artifact-windows
           path: build/windows/runner/Release/alisthelper-${{github.ref_name}}-windows.zip
+
+  build-macos:
+    # The type of runner that the job will run on
+    runs-on: macos-latest
+
+    env:
+      # The name of the app
+      MACOS_APP_NAME: ${{ env.APP_NAME }}_${{ github.ref_name }}_macos-x86_64
+      DMG_NAME: My-App_${{ github.ref_name }}_macos.dmg
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v3
+
+      - name: Install Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: "stable"
+
+      - name: Build
+        run: |
+          flutter config --enable-macos-desktop
+          flutter pub get
+          dart run slang
+          flutter build macos
+
+      - name: Archive App
+        run: |
+          cd ${{ env.APP_NAME }}/build/macos/Build/Products/Release/
+          tar -czf ${{ env.MACOS_APP_NAME }}.tar.gz ${{ env.APP_NAME }}.app
+          hdiutil create -volname "${{ env.APP_NAME }}" -srcfolder ${{ env.APP_NAME }}.app -ov -format UDZO ${{ env.DMG_NAME }}
+
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: ${{ github.ref_name }}
+          draft: true
+          prerelease: true
+          token: ${{ secrets.GITHUB_TOKEN }}
+          files: |
+            ${{ env.APP_NAME }}/build/macos/Build/Products/Release/${{ env.DMG_NAME }}
+            ${{ env.APP_NAME }}/build/macos/Build/Products/Release/${{ env.MACOS_APP_NAME }}.tar.gz
+
+      - name: Upload Release Asset
+        uses: actions/upload-artifact@v2
+        with:
+          name: artifact-macos
+          path: ${{ env.APP_NAME }}/build/macos/Build/Products/Release/${{ env.MACOS_APP_NAME }}.tar.gz
