--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -103,9 +103,9 @@ jobs:
 
       - name: Archive App
         run: |
-          cd /build/macos/Build/Products/Release/
-          tar -czf ${{ env.MACOS_APP_NAME }}.tar.gz AlistHelper.app
-          hdiutil create -volname "AlistHelper" -srcfolder AlistHelper.app -ov -format UDZO ${{ env.DMG_NAME }}
+          cd alisthelper/build/macos/Build/Products/Release/
+          tar -czf ${{ env.MACOS_APP_NAME }}.tar.gz alisthelper.app
+          hdiutil create -volname "alisthelper" -srcfolder alisthelper.app -ov -format UDZO ${{ env.DMG_NAME }}
 
       - name: Release
         uses: softprops/action-gh-release@v1
@@ -115,11 +115,11 @@ jobs:
           prerelease: true
           token: ${{ secrets.GITHUB_TOKEN }}
           files: |
-            /build/macos/Build/Products/Release/${{ env.DMG_NAME }}
-            /build/macos/Build/Products/Release/${{ env.MACOS_APP_NAME }}.tar.gz
+            alisthelper/build/macos/Build/Products/Release/${{ env.DMG_NAME }}
+            alisthelper/build/macos/Build/Products/Release/${{ env.MACOS_APP_NAME }}.tar.gz
 
       - name: Upload Release Asset
         uses: actions/upload-artifact@v2
         with:
           name: artifact-macos
-          path: /build/macos/Build/Products/Release/${{ env.MACOS_APP_NAME }}.tar.gz
+          path: alisthelper/build/macos/Build/Products/Release/${{ env.MACOS_APP_NAME }}.tar.gz
