--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -100,10 +100,14 @@ jobs:
           flutter pub get
           dart run slang
           flutter build macos
+      
+      - name: List all directories 
+        run: ls -R
+      
 
       - name: Archive App
         run: |
-          cd alisthelper/build/macos/Build/Products/Release/
+          cd build/macos/Build/Products/Release/
           tar -czf ${{ env.MACOS_APP_NAME }}.tar.gz alisthelper.app
           hdiutil create -volname "alisthelper" -srcfolder alisthelper.app -ov -format UDZO ${{ env.DMG_NAME }}
 
@@ -115,11 +119,11 @@ jobs:
           prerelease: true
           token: ${{ secrets.GITHUB_TOKEN }}
           files: |
-            alisthelper/build/macos/Build/Products/Release/${{ env.DMG_NAME }}
-            alisthelper/build/macos/Build/Products/Release/${{ env.MACOS_APP_NAME }}.tar.gz
+            build/macos/Build/Products/Release/${{ env.DMG_NAME }}
+            build/macos/Build/Products/Release/${{ env.MACOS_APP_NAME }}.tar.gz
 
       - name: Upload Release Asset
         uses: actions/upload-artifact@v2
         with:
           name: artifact-macos
-          path: alisthelper/build/macos/Build/Products/Release/${{ env.MACOS_APP_NAME }}.tar.gz
+          path: build/macos/Build/Products/Release/${{ env.MACOS_APP_NAME }}.tar.gz
