--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,8 @@ dependencies:
   launch_at_startup: ^0.2.2
   # package_info_plus is a package that provides package info
   package_info_plus: ^4.0.1
-  # file_picker is used to choose working dir
-  file_picker: ^5.2.11
+  # file_selector is used to choose working dir
+  file_selector: ^1.0.0
   # http is used to check upgrade
   http: ^1.0.0
   #i18n
