--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   file_selector: ^1.0.0
   # http is used to check upgrade
   http: ^1.0.0
+  dio: ^5.3.0
+  archive: ^3.3.7
   #i18n
   slang: ^3.20.0
   slang_flutter: ^3.20.0
