--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   # collection is a package that has some useful collection utils
   collection: ^1.17.2
   # flutter_riverpod is a package that provides state management
-  flutter_riverpod: ^2.3.6
+  flutter_riverpod: ^2.4.3
   # shared_preferences is a package that provides persistent storage
   shared_preferences: ^2.2.0
   # screen_retriever is a package that provides screen info
@@ -35,7 +35,7 @@ dependencies:
   # http is used to check upgrade
   http: ^1.0.0
   dio: ^5.3.0
-  archive: ^3.3.7
+  archive: ^3.4.4
   #i18n
   slang: ^3.20.0
   slang_flutter: ^3.20.0
@@ -43,6 +43,7 @@ dependencies:
     sdk: flutter
   freezed_annotation: ^2.4.1
   path_provider: ^2.0.15
+  json_annotation: ^4.8.1
   
 
 dev_dependencies:
@@ -53,6 +54,7 @@ dev_dependencies:
   build_runner: ^2.1.5
   freezed: ^2.4.1
   slang_build_runner: ^3.21.0
+  json_serializable: ^6.7.1
 
 flutter_launcher_icons:
   image_path: "assets\\alisthelper.png"
