perf: add rclone directory setting
Add rclone directory setting and not showing rclone tab when rclone is not set

--- a/build.yaml
+++ b/build.yaml
@@ -14,3 +14,7 @@ targets:
       freezed|freezed:
         generate_for:
           - lib/model/*.dart
+
+      riverpod_annotation:
+        generate_for:
+          - lib/provider/*.dart
