--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,17 +15,17 @@ dependencies:
   # url_launcher can launch url
   url_launcher: ^6.2.3
   # tray_manager allows Flutter desktop apps to defines system tray
-  tray_manager: ^0.2.1
+  tray_manager: ^0.3.0
   # window_manager allows Flutter desktop apps to control window
-  window_manager: ^0.4.0
+  window_manager: ^0.4.3
   # collection is a package that has some useful collection utils
-  collection: ^1.18.0
+  collection: 1.18.0
   # flutter_riverpod is a package that provides state management
   flutter_riverpod: ^2.4.9
   # shared_preferences is a package that provides persistent storage
   shared_preferences: ^2.3.1
   # screen_retriever is a package that provides screen info
-  screen_retriever: ^0.1.9
+  screen_retriever: ^0.2.0
   # launch_at_startup is a package that provides launch at startup
   launch_at_startup: ^0.3.1
   # package_info_plus is a package that provides package info
@@ -37,8 +37,8 @@ dependencies:
   dio: ^5.4.0
   archive: ^3.4.5
   #i18n
-  slang: ^3.28.0
-  slang_flutter: ^3.28.0
+  slang: ^4.3.0
+  slang_flutter: ^4.3.0
   flutter_localizations:
     sdk: flutter
   freezed_annotation: ^2.4.1
@@ -49,11 +49,11 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^4.0.0
-  flutter_launcher_icons: ^0.13.1
+  flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.14.1
   build_runner: ^2.4.11
   freezed: ^2.5.2
-  slang_build_runner: ^3.21.0
+  slang_build_runner: ^4.3.0
   json_serializable: ^6.7.1
 
 
