feat: enhance Rclone functionality with version tracking and UI updates

--- a/build.yaml
+++ b/build.yaml
@@ -5,7 +5,7 @@ targets:
       slang_build_runner:
         options:
           base_locale: en
-          # fallback_strategy: base_locale
+          fallback_strategy: base_locale
         generate_for:
           - lib/i18n/*.json
       json_serializable:
