feat: add logger dependency, update rclone directory naming, and enhance localization strings

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   freezed_annotation: ^2.4.1
   path_provider: ^2.1.2
   json_annotation: ^4.9.0
+  logger: ^2.5.0
   
 
 dev_dependencies:
